syntax = "proto3";
package rill.admin.v1;

import "google/api/annotations.proto";
import "rill/ai/v1/ai.proto";

service AIService {
  // Complete sends the messages of a chat to the AI and asks it to generate a new message.
  rpc Complete(CompleteRequest) returns (CompleteResponse) {
    option (google.api.http) = {
      post: "/v1/ai/complete",
      body: "*"
    };
  }
}

message CompleteRequest {
  repeated rill.ai.v1.CompletionMessage messages = 1;
  // Optional list of tools that the AI can use during completion
  repeated rill.ai.v1.Tool tools = 2;
}

message CompleteResponse {
  rill.ai.v1.CompletionMessage message = 1;
}
